Modified Necessary Parts

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,8 +2,8 @@
 
 .fixed-alert-container {
     position: fixed;
-    top: 850px;
-    left: 1600px;
+    top: 50px;
+    /* left: 1600px; */
     width: 100%;
     z-index: 9999;
     padding: 10px;
